# usr-vm

./: .gitignore  Cargo.toml  Makefile.toml  usr-db.sqlite
.cargo/: config.toml
.github/workflows/: deploy.yml
bruno/: Add Schedule.bru  Change Order.bru  Delete Order.bru  Delete Schedule.bru  Get Schedule.bru  List Orders.bru  New Order.bru  Set Teams.bru  Update Order.bru  bruno.json
usr-backend/: Cargo.toml
usr-backend-runner/: Cargo.toml
usr-backend-runner/src/: main.rs
usr-backend/src/: attendance.rs  backup.rs  main.rs  manifest.rs  scheduler.rs  webhook.rs
usr-backend/src/attendance/: attendance.rs
usr-backend/src/manifest/: order.rs  order_status.rs
usr-backend/src/scheduler/: availability.rs  team.rs
usr-web/: .env.production  package-lock.json  package.json
usr-web/src/lib/: index.ts
usr-web/src/routes/: +page.svelte
usr-web/src/routes/(apps)/: +layout.svelte
usr-web/src/routes/(apps)/attendance/: +page.svelte
usr-web/src/routes/(apps)/manifest/: +page.svelte
usr-web/src/routes/(apps)/scheduler/: +page.svelte
